styles/markdown.module.css
.wmdeMarkdown,
.wmde-markdown {
  @apply bg-transparent;

  @media (max-width: 1440px) {
    @apply text-[14px];
  }
  h1 {
    @apply text-lg font-bold border-none;
  }
  h2 {
    @apply text-lg font-bold border-none;
  }
  h3 {
    @apply text-base font-bold border-none;
  }
  h4,
  h5,
  h6,
  h7,
  h8 {
    @apply text-base font-bold border-none;
  }
}

.markdownFeed {
  .wmde-markdown {
    * {
      font-size: 16px;
      @media (max-width: 1440px) {
        @apply text-[15px];
      }
    }
    strong,
    a {
      color: black;
      font-weight: 700;
    }
  }
}

